--- a/Part02/index.html
+++ b/Part02/index.html
@@ -18,8 +18,8 @@
         <!-- <h1>HF-FTL: Fine-Tune Locally</h1>  -->
         <div class="jumbotron jumbotron-fluid text-light">
             <div class="container-fluid">
-                <h1 class="display-4">Qwen-Max: Agentic Demo</h1>
-                <p class="lead">Agentic AI with Qwen + Tools</p>
+                <h1 class="display-4">Journey to Agentic AI, Starting from First Principles</h1>
+                <p class="lead">Part 2: Giving Control of Our Computer to an LLM</p>
             </div>
         </div>
 
