--- a/Part05/index.html
+++ b/Part05/index.html
@@ -20,7 +20,7 @@
         <div class="jumbotron jumbotron-fluid text-light">
             <div class="container-fluid">
                 <h1 class="display-4">Journey to Agentic AI, Starting from First Principles</h1>
-                <p class="lead">Part 4: Web Search Powers</p>
+                <p class="lead">Part 5: Web Search / Research Capability</p>
             </div>
         </div>
 
